[project]
name = "raptor"
version = "0.1.0"
description = "RAPTOR: Recursive Abstractive Processing for Tree-Organized Retrieval (ICLR 2024)"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
dependencies = [
    "openai>=1.3",
    "tiktoken>=0.5",
    "tenacity>=8.2",
    "numpy>=1.26",
    "scikit-learn",
    "umap-learn>=0.5.5",
]

[project.optional-dependencies]
# Heavy deps only needed if using the bundled QA/embedding models
full = [
    "faiss-cpu",
    "torch",
    "transformers>=4.38",
    "sentence-transformers>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["raptor"]
